## Process this file with automake to produce Makefile.in

EXTRA_DIST =	bayrad.docbook \
		CFontz.docbook \
		CFontzPacket.docbook \
		curses.docbook \
		CwLnx.docbook \
		ea65.docbook \
		eyeboxone.docbook \
		g15.docbook \
		glcd.docbook \
		glcdlib.docbook \
		glk.docbook \
		hd44780.docbook \
		i2500vfd.docbook \
		icp_a106.docbook \
		imon.docbook \
		imonlcd.docbook \
		IOWarrior.docbook \
		irman.docbook \
		irtrans.docbook \
		joy.docbook \
		lb216.docbook \
		lcdm001.docbook \
		lcterm.docbook \
		lircin.docbook \
		lis.docbook \
		MD8800.docbook \
		mdm166a.docbook \
		ms6931.docbook \
		mtc_s16209x.docbook \
		mtxorb.docbook \
		mx5000.docbook \
		NoritakeVFD.docbook \
		picolcd.docbook \
		ppttrouble.docbook \
		pylcd.docbook \
		rawserial.docbook \
		sdeclcd.docbook \
		sed1330.docbook \
		sed1520.docbook \
		serialPOS.docbook \
		serialVFD.docbook \
		shuttleVFD.docbook \
		sli.docbook \
		stv5730.docbook \
		SureElec.docbook \
		svga.docbook \
		t6963.docbook \
		text.docbook \
		tyan.docbook \
		ula200.docbook \
		vlsys_m428.docbook \
		xosd.docbook

## EOF
